--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,9 @@ body {
     border-radius: 5px;
     box-shadow: 2px 3px #888888;
 }
+
+#div_img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
