--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 body {
     background-color: rgb(255, 255, 165);
 }
